--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "email-validator": "^2.0.4",
     "express": "^4.21.2",
     "mongodb": "^6.13.0",
     "mongoose": "^8.9.6"
